workshop03/kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment

metadata:
  name: demopythonapp
  labels:
    name: demopythonapp

spec: 
  replicas: 1
  selector:
    matchLabels:
      name: demopythonapp
  template:
    metadata:
      name: demopythonapp
      labels: 
        name: demopythonapp
    spec:
      containers:
      - name: demopythonappcontainer
        image: xawntan/day3_image:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 6000
