workshop03/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demopythonappsvc
spec:
  selector:
    app: demopythonapp
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 6000
