workshop03/kube/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demopythonappgw
spec:
  selector:
    istio: ingressgateway #controller
  servers:
  - hosts:
    - xawn.68.183.247.89.nip.io
    port:
      number: 80
      protocol: HTTP
      name: HTTP
